# server/routes/api/socialLogin.js
@@ -13,4 +13,9 @@ router.post(
   passport.authenticate('google-token', { session: false }), Users.socialLogin
 );
 
+router.get('/auth/twitter', passport.authenticate('twitter'));
+
+router.get('/auth/twitter/callback',
+  passport.authenticate('twitter', { session: false }), Users.socialLogin);
+
 export default router;
